--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,18 @@
+.boton {
+  background-color: darkblue; }
+
+.boton {
+  border: 3px solid whitesmoke;
+  border-radius: 4px;
+  padding: 20px; }
+
+.formulario {
+  background-color: darkorange;
+  transform: scale(90%); }
+
+h4 {
+  transform: scale(60%); }
+
 * {
   margin: 0;
   padding: 0; }
@@ -14,27 +29,41 @@ h1 {
 
 h3 {
   color: whitesmoke;
-  margin: 10px; }
+  margin: 10px;
+  text-align: center; }
 
 .grid {
+  display: grid;
   background-color: orangered;
   width: 80%;
+  margin-left: 10%;
   padding: 10 px;
   border: 5px solid black;
-  display: grid;
-  grid-template-columns: auto; }
+  display: grid; }
   .grid .caja:hover {
     text-align: auto;
     background-color: darkred; }
-    .grid .caja:hover form {
-      background-color: orange; }
   .grid img {
-    justify-self: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10%;
     max-width: 80%;
     max-height: 80%; }
 
+.boton {
+  display: grid;
+  grid-template-columns: auto;
+  width: 15%;
+  margin-left: 40%; }
+
 p {
   color: whitesmoke; }
+
+.alineado {
+  display: grid;
+  align-self: center;
+  justify-content: center; }
 
 legend {
   color: whitesmoke; }
@@ -42,6 +71,6 @@ legend {
 label {
   color: whitesmoke; }
 
-h6 {
+h4 {
   text-align: center;
   color: whitesmoke; }
