--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,3 +1,11 @@
+@import "base/mapas";
+@import"components/header";
+@import "base/extends";
+@import "base/mixin";
+@import "base/condicionales";
+
+
+
 $color-texto: whitesmoke;
 
 
@@ -21,37 +29,55 @@ h1{
 h3{
     color: whitesmoke;
     margin: 10px;
+    text-align: center;
 
 }
 
 .grid{
+    display: grid;
     background-color: orangered;
     width: 80%;
+    margin-left: 10%;
     padding: 10 px; 
     border: 5px solid black;
     display: grid;
-    grid-template-columns: auto ;
+    
    
     .caja:hover{
         text-align: auto ;
         background-color: darkred;
-
-        form{
-            background-color: orange;
-        }
     }
     
     img{
-        justify-self: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 10%;
         max-width: 80%;
         max-height: 80%;
     }
     
 }
 
+.boton{
+    display: grid;
+    grid-template-columns: auto;
+    width: 15%;
+    margin-left: 40%;
+}
+
 p{
     color: $color-texto;
 }
+
+.alineado{
+    display: grid;  
+    align-self: center;
+    justify-content: center;
+    
+}
+
+
 
 legend{
     color: $color-texto;
@@ -61,7 +87,7 @@ label{
     color: $color-texto;
 }
 
-h6{
+h4{
     text-align: center;
     color: $color-texto;
 }
