commiteando modificaciones tanto a los html como al css, mas la adicion de paginas extra de scss para futuro uso

--- a/css/main.css
+++ b/css/main.css
@@ -57,8 +57,16 @@ h3 {
   width: 15%;
   margin-left: 40%; }
 
+iframe {
+  display: flex;
+  align-self: center;
+  justify-content: center; }
+
 p {
-  color: whitesmoke; }
+  color: whitesmoke;
+  display: grid;
+  align-self: center;
+  justify-content: center; }
 
 .alineado {
   display: grid;
